lesson_5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redmine
  name: redmine
  namespace: redmine
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      hostNetwork: true
      serviceAccountName: redmine
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mypvc-re
