lesson_5/my_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-re
spec:
  selector:
    app: redmine
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
